--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Modificar.cshtml
@@ -308,7 +308,10 @@
     if ((@ViewBag.NoMostrarBotones ?? true) == false)
     {
         <div class="box-footer">
+        @if (ViewBag.MostrarBoton ?? false)
+        {
             <button type="submit" class="btn btn-primary">Guardar</button>
+        }
             <a class="btn btn-default" href="@Url.Action("Index", "CajaMovimientoEgreso", new { Area = "Caja" }, null)">Cancelar</a>
         </div>
     }
