--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/Modificar.cshtml
@@ -267,7 +267,10 @@
         </div>
 
         <div class="box-footer">
+            @if (ViewBag.MostrarBoton ?? false)
+            {
             <button type="submit" class="btn btn-primary">Guardar</button>
+            }
             <a class="btn btn-default" href="@Url.Action("Index", "LiquidacionTarjetaCredito", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
         </div>
         @section Scripts {
