--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Anular.cshtml
@@ -45,6 +45,15 @@
     @Html.HiddenFor(q => q.IdCbteCble)
     @Html.HiddenFor(q => q.IdTipocbte)
 
+    if (@ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -153,7 +162,10 @@
     if (!(ViewBag.NoMostrarBotones ?? true))
     {
         <div class="box-footer">
+        @if (ViewBag.MostrarBoton ?? false)
+        {
             <button type="submit" class="btn btn-danger">Anular</button>
+        }
             <a class="btn btn-default" href="@Url.Action("Index", "CajaMovimientoIngreso", new { Area = "Caja" }, null)">Cancelar</a>
         </div>
     }
