--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -596,7 +596,10 @@
     </div>
 
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-primary">Guardar</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index", "ConciliacionCaja", new { Area = "Caja" }, null)">Cancelar</a>
     </div>
     @section Scripts {
