--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Anular.cshtml
@@ -16,6 +16,16 @@
     @Html.HiddenFor(q => q.IdTipoCbte)
     @Html.HiddenFor(q => q.IdCbteCble)
 
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+
+    }
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -101,7 +111,10 @@
     </div>
 
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-danger">Anular</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index","ComprobanteContable",new {IdTipoCbte = Model.IdTipoCbte , Area = "Contabilidad" },null)">Cancelar</a>
     </div>
     @section Scripts {
