--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Anular.cshtml
@@ -281,7 +281,10 @@
 
 
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-danger">Anular</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index", "Cobranza", new { Area = "CuentasPorCobrar" }, null)">Cancelar</a>
     </div>
     @section Scripts {
