--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionComisiones/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionComisiones/Anular.cshtml
@@ -13,6 +13,16 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdLiquidacion)
+
+    if (@ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
@@ -68,7 +78,10 @@
     </div>
 
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-danger">Anular</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index","LiquidacionComisiones", new {  Area = "CuentasPorCobrar"  },null)">Cancelar</a>
     </div>
     @section Scripts {
