--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
@@ -257,7 +257,10 @@
         </div>
     </div>
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-danger">Anular</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index","OrdenPago",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
     </div>
 
