--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Modificar.cshtml
@@ -26,6 +26,16 @@
         </div>
     }
 
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+
+    }
+
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-8">
@@ -122,7 +132,10 @@
 
 
 <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
     <button type="submit" class="btn btn-primary">Guardar</button>
+    }
     <a class="btn btn-default" href="@Url.Action("Index","EmpleadoNovedad",new { Area = "RRHH" },null)">Cancelar</a>
 </div>
 @section Scripts {
