--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Anular.cshtml
@@ -22,6 +22,14 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdCarga)
 
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
 
     <div class="row">
         <div class="col-md-12">
@@ -127,7 +135,10 @@
     </div>
 
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-danger">Anular</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index","ImportacionHoras",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
