--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Anular.cshtml
@@ -14,6 +14,16 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdNovedad)
+
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-8">
@@ -92,7 +102,10 @@
         </div>
     </div>
     <div class="box-footer">
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-danger">Anular</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index","ComprobanteContable",new { Area = "Contabilidad" },null)">Cancelar</a>
     </div>
     @section Scripts {
