--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Modificar.cshtml
@@ -191,7 +191,10 @@
     </div>
     <div class="box-footer">
         <button type="button" onclick="Generar();" id="btnconsultar" class="btn btn-primary">Generar</button>
+    @if (ViewBag.MostrarBoton ?? false)
+    {
         <button type="submit" class="btn btn-primary">Guardar</button>
+    }
         <a class="btn btn-default" href="@Url.Action("Index","Prestamos",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
 
