--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
@@ -61,6 +61,7 @@
             IdTransaccionSession: $("#IdTransaccionSession").val(),
             IdTipoPersona: $("#IdTipoPersona").val(),
             IdEntidad: IdEntidad.GetValue(),
+            IdCaja: $("#IdCaja").val()
         }
         $.ajax({
             type: 'POST',
