--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
@@ -128,7 +128,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -611,7 +611,8 @@ function Buscar_op() {
     var datos = {
         IdProveedor: IdProveedor.GetValue(),
         IdEmpresa: $("#IdEmpresa").val(),
-        IdTransaccionSession: $("#IdTransaccionSession").val()
+        IdTransaccionSession: $("#IdTransaccionSession").val(),
+        IdSucursal: $("#IdSucursal").val(),
     }
     $.ajax({
         type: 'POST',
