--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Inventario.in_Marca_Info
 @{
-    ViewBag.Title = "Nueva grupo";
+    ViewBag.Title = "Nueva familia";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
